argocd/argocd.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-virtualservice
  namespace: argocd
spec:
  gateways:
    - argocd/argo-gateway
  hosts:
    - argocd.kube.local
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
          weight: 100
